--- a/ali_sonmez_multec_werkstuk2/Base.lproj/Main.storyboard
+++ b/ali_sonmez_multec_werkstuk2/Base.lproj/Main.storyboard
@@ -19,72 +19,61 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ead-nA-ZMg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="578"/>
                                 <connections>
                                     <outlet property="delegate" destination="8bC-Xf-vdC" id="yHN-xY-6sf"/>
                                 </connections>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rs3-jT-bTs">
+                                <rect key="frame" x="16" y="608" width="120" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Nederlands"/>
+                                <connections>
+                                    <action selector="btnNed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="46B-2O-mhN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPm-BZ-Ynz">
+                                <rect key="frame" x="16" y="646" width="120" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="English"/>
+                                <connections>
+                                    <action selector="btnEn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JpI-p9-9cx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RRl-3e-tcf">
+                                <rect key="frame" x="16" y="689" width="120" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Francais"/>
+                                <connections>
+                                    <action selector="btnFr:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hGM-oA-B0A"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWz-ta-Saa">
+                                <rect key="frame" x="184" y="648" width="175" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="67R-co-eAa"/>
-                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6pi-oN-4YK"/>
-                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="7tj-Fz-pH5"/>
-                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="yc8-bR-bCq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ead-nA-ZMg" secondAttribute="bottom" constant="200" id="f2j-Wv-tLL"/>
+                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="g3S-L7-vZx"/>
+                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qeW-1Q-kHb"/>
+                            <constraint firstItem="Ead-nA-ZMg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="r6S-qy-81T"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="CZL-KG-4vS"/>
                     <connections>
+                        <outlet property="lblTitel" destination="jWz-ta-Saa" id="T4v-F5-fn8"/>
                         <outlet property="mapView" destination="Ead-nA-ZMg" id="a7x-Mi-1mm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1079.2" y="133.00492610837438"/>
-        </scene>
-        <!--Detaille View Controller-->
-        <scene sceneID="1aP-zJ-GgA">
-            <objects>
-                <viewController storyboardIdentifier="detaille" id="CCJ-BZ-c5w" customClass="DetailleViewController" customModule="ali_sonmez_multec_werkstuk2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wIr-7A-Cjm">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Titel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAp-iy-HGz">
-                                <rect key="frame" x="16" y="145" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Titel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8az-XH-Bbb">
-                                <rect key="frame" x="16" y="352" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Titel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pg8-BW-frY">
-                                <rect key="frame" x="16" y="252" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="mo2-Cf-PyT"/>
-                    </view>
-                    <connections>
-                        <outlet property="lblCoordinaten" destination="8az-XH-Bbb" id="smb-Ud-3xu"/>
-                        <outlet property="lblSubtitel" destination="pg8-BW-frY" id="BlT-3y-ruE"/>
-                        <outlet property="lblTitel" destination="XAp-iy-HGz" id="T30-a9-GHb"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="biG-RF-Znz" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1948" y="124.8768472906404"/>
+            <point key="canvasLocation" x="927" y="133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2NG-zi-QzJ">
